<resources>
    <string name="app_name">Apps CM</string>
    <string name="action_settings">Settings</string>
    <string name="system_app">Системное</string>
    <string name="user_app">Пользовательское</string>
    <string name="convert_to_system">Convert to system?</string>
    <string name="convert_to_user">Convert to user app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_root">No root available</string>
    <string name="no_root_description">It seems like you don\'t have su binaries installed on your system or you denied my superuser request. You may continue using this app but you won\'t be able to move applications.</string>
    <string name="ok">OK</string>
    <string name="updated_app">Updated system app</string>
    <string name="integrate_to_system">Move updates to /system?</string>
    <string name="need_reboot">Need reboot</string>
    <string name="no_busybox_title">No busybox available</string>
    <string name="no_busybox_message">Keep in mind that transfer to system will not write files to addon.d. Would you like to install Busybox from Play Market?</string>
    <string name="play_market">Play Market</string>
    <string name="size">Total size</string>
    <string name="megabyte">Mbytes</string>
    <string name="show_mem_stats">Memory usage</string>
    <string name="mem_info_used">Used</string>
    <string name="mem_info_free">Free</string>
    <string name="mem_info_total">Total</string>
    <string name="mem_info_percentage">Percentage</string>
    <string name="mem_info_partition_name">Partition</string>
</resources>
